[gd_scene load_steps=7 format=3 uid="uid://dmrbnmyad6wr2"]

[ext_resource type="Script" uid="uid://bwu6ff65pcxih" path="res://Entities/Potion/potion_to_throw.gd" id="1_g2bs8"]
[ext_resource type="Texture2D" uid="uid://d11vfswbnwfub" path="res://Entities/Potion/PotionIcons/PotionIce.png" id="2_p4qtn"]
[ext_resource type="Texture2D" uid="uid://36v8gjdnyohq" path="res://Entities/Potion/ExplosionIcons/ExplosionFire.png" id="4_g4nnj"]
[ext_resource type="PackedScene" uid="uid://bg872vxqwe6vv" path="res://Entities/Components/EssenceComponent/essence_component.tscn" id="4_k8q42"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2bs8"]
radius = 113.39

[sub_resource type="CircleShape2D" id="CircleShape2D_k8q42"]
radius = 381.81

[node name="PotionToThrow" type="Area2D"]
scale = Vector2(0.2, 0.2)
script = ExtResource("1_g2bs8")

[node name="PotionTexture" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_p4qtn")

[node name="PotionColissionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_g2bs8")

[node name="EssenceComponent" parent="." instance=ExtResource("4_k8q42")]

[node name="Explosion" type="Area2D" parent="."]
visible = false

[node name="ExplosionTexture" type="TextureRect" parent="Explosion"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -385.0
offset_top = -380.0
offset_right = -129.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
texture = ExtResource("4_g4nnj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion"]
shape = SubResource("CircleShape2D_k8q42")
